# lp-mspm0g3507

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  license.txt
cmake/: arm-none-eabi-gcc.cmake
src/: CMakeLists.txt  compiler.h  hal_asm.h  hal_startup.c  lp-mspm0g3507-playground.ld  main.c  newlib_syscalls.c  util.h
